deployments/plant-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plant-sender
  template:
    metadata:
      labels:
        app: plant-sender
    spec:
      containers:
        - name: plant-sender
          image: plant-sender:latest
          volumeMounts:
            - name: plant-data
              mountPath: /app/data
      volumes:
        - name: plant-data
          configMap:
            name: plant-data-config
